--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,5 +30,6 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
-  }
+  },
+  "packageManager": "pnpm@10.12.1"
 }
