--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,17 @@
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
 .env
+.venv
+venv/
+ENV/
+env/
+.pytest_cache/
+.coverage
+.mypy_cache/
+*.egg-info/
+dist/
+build/
+.DS_Store
