google calendar button, debug mode slight functionality tests added, task panel is brought up by clicking outide of garden now

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,12 @@
 VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 VITE_API_URL=http://localhost:8000
+
+# Google Calendar API Configuration
+# Get these values from Google Cloud Console
+REACT_APP_GOOGLE_API_KEY=your_google_api_key_here
+REACT_APP_GOOGLE_CLIENT_ID=your_google_client_id_here.apps.googleusercontent.com
+
+# Example values (replace with your actual values):
+# REACT_APP_GOOGLE_API_KEY=AIzaSyB1234567890abcdefghijklmnop
+# REACT_APP_GOOGLE_CLIENT_ID=123456789012-abcdefghijklmnopqrstuvwxyz123456.apps.googleusercontent.com
